# MaroviPipelines

./: .gitignore  CONTRIBUTING.md  INSTALLATION.md  README.md  pyproject.toml
marovipipelines/core/: __init__.py  context.py  steps.py
marovipipelines/llm/: client.py
marovipipelines/llm/providers/: __init__.py  anthropic.py  base.py  openai.py
marovipipelines/llm/schemas/: __init__.py
marovipipelines/pipelines/: __init__.py  base.py  example.py  steps.py
marovipipelines/translation/: steps.py
marovipipelines/translation/providers/: base.py  google.py
tests/pipelines/: __init__.py  test_pipeline.py
tutorials/: test.ipynb  translation_example.py
